# SAR-Pattern-Validation

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  INVARIANTS.md  LICENSE.md  MEASUREMENT_VALIDATION_TESTING.md  Makefile  README.md  SPEC.md  generate_and_open_measurement_validation_dashboard.py  generate_measurement_validation_report_html.py  notebook_bootstrap.py  pyproject.toml  run_measurement_validation_tests.py  run_pipeline.py  run_voila_smoke.py
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: agents_historical_breaks.md  agents_threading_and_dispatch.md  agents_validation_rules.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md  voila_frontend_architecture.md
data/database/: dipole_1450MHz_Flat_10mm_10g.csv  dipole_1450MHz_Flat_10mm_1g.csv  dipole_1450MHz_Flat_25mm_10g.csv  dipole_1450MHz_Flat_25mm_1g.csv  dipole_1450MHz_Flat_5mm_10g.csv  dipole_1450MHz_Flat_5mm_1g.csv  dipole_1500MHz_Flat_10mm_10g.csv  dipole_1500MHz_Flat_10mm_1g.csv  dipole_1500MHz_Flat_25mm_10g.csv  dipole_1500MHz_Flat_25mm_1g.csv  dipole_1500MHz_Flat_5mm_10g.csv  dipole_1500MHz_Flat_5mm_1g.csv  dipole_1640MHz_Flat_10mm_10g.csv  dipole_1640MHz_Flat_10mm_1g.csv  dipole_1640MHz_Flat_25mm_10g.csv  dipole_1640MHz_Flat_25mm_1g.csv  dipole_1640MHz_Flat_5mm_10g.csv  dipole_1640MHz_Flat_5mm_1g.csv  dipole_1750MHz_Flat_10mm_10g.csv  dipole_1750MHz_Flat_10mm_1g.csv  dipole_1750MHz_Flat_25mm_10g.csv  dipole_1750MHz_Flat_25mm_1g.csv  dipole_1750MHz_Flat_5mm_10g.csv  dipole_1750MHz_Flat_5mm_1g.csv  dipole_1800MHz_Flat_10mm_10g.csv  dipole_1800MHz_Flat_10mm_1g.csv  dipole_1800MHz_Flat_25mm_10g.csv  dipole_1800MHz_Flat_25mm_1g.csv  dipole_1800MHz_Flat_5mm_10g.csv  dipole_1800MHz_Flat_5mm_1g.csv  dipole_1900MHz_Flat_10mm_10g.csv  dipole_1900MHz_Flat_10mm_1g.csv  dipole_1900MHz_Flat_25mm_10g.csv  dipole_1900MHz_Flat_25mm_1g.csv  dipole_1900MHz_Flat_5mm_10g.csv  dipole_1900MHz_Flat_5mm_1g.csv  dipole_1950MHz_Flat_10mm_10g.csv  dipole_1950MHz_Flat_10mm_1g.csv  dipole_1950MHz_Flat_25mm_10g.csv  dipole_1950MHz_Flat_25mm_1g.csv  (+121 more)
data/example/: measured_sSAR1g.csv  reference_sSAR1g.csv
data/measurements/: D1950_Flat HSL_10 mm_10 dBm_10g_10.csv  D1950_Flat HSL_10 mm_10 dBm_10g_11.csv  D1950_Flat HSL_10 mm_10 dBm_10g_12.csv  D1950_Flat HSL_10 mm_10 dBm_1g_10.csv  D1950_Flat HSL_10 mm_10 dBm_1g_11.csv  D1950_Flat HSL_10 mm_10 dBm_1g_12.csv  D1950_Flat HSL_10 mm_20 dBm_10g_1.csv  D1950_Flat HSL_10 mm_20 dBm_10g_2.csv  D1950_Flat HSL_10 mm_20 dBm_10g_3.csv  D1950_Flat HSL_10 mm_20 dBm_10g_4.csv  D1950_Flat HSL_10 mm_20 dBm_10g_5.csv  D1950_Flat HSL_10 mm_20 dBm_10g_6.csv  D1950_Flat HSL_10 mm_20 dBm_10g_7.csv  D1950_Flat HSL_10 mm_20 dBm_10g_8.csv  D1950_Flat HSL_10 mm_20 dBm_10g_9.csv  D1950_Flat HSL_10 mm_20 dBm_1g_1.csv  D1950_Flat HSL_10 mm_20 dBm_1g_2.csv  D1950_Flat HSL_10 mm_20 dBm_1g_3.csv  D1950_Flat HSL_10 mm_20 dBm_1g_4.csv  D1950_Flat HSL_10 mm_20 dBm_1g_5.csv  D1950_Flat HSL_10 mm_20 dBm_1g_6.csv  D1950_Flat HSL_10 mm_20 dBm_1g_7.csv  D1950_Flat HSL_10 mm_20 dBm_1g_8.csv  D1950_Flat HSL_10 mm_20 dBm_1g_9.csv  D1950_Flat HSL_10 mm_4 dBm_10g_13.csv  D1950_Flat HSL_10 mm_4 dBm_10g_14.csv  D1950_Flat HSL_10 mm_4 dBm_10g_15.csv  D1950_Flat HSL_10 mm_4 dBm_1g_13.csv  D1950_Flat HSL_10 mm_4 dBm_1g_14.csv  D1950_Flat HSL_10 mm_4 dBm_1g_15.csv  D2450_Flat_10mm_17dBm_10g_1.csv  D2450_Flat_10mm_17dBm_10g_2.csv  D2450_Flat_10mm_17dBm_10g_3.csv  D2450_Flat_10mm_17dBm_10g_4.csv  D2450_Flat_10mm_17dBm_10g_5.csv  D2450_Flat_10mm_17dBm_10g_6.csv  D2450_Flat_10mm_17dBm_10g_7.csv  D2450_Flat_10mm_17dBm_10g_8.csv  D2450_Flat_10mm_17dBm_10g_9.csv  D2450_Flat_10mm_17dBm_1g_2.csv  (+89 more)
notebook_support/: __init__.py  catalog.py  runner.py  runtime.py  state.py  ui.py
notebooks/: tutorial_gamma_pattern_validation_notebook.ipynb  voila.ipynb
notebooks/system_state/: ui_state.json
notebooks/uploaded_data/: measured_data.csv
osparc_makefile/: Makefile
report_template/: main.tex  sample.bib
scripts/: run_in_jupyter_math.sh  voila_docker.sh
src/sar_pattern_validation/: __init__.py  errors.py  gamma_eval.py  image_loader.py  measurement_validation_report.py  plotting.py  registration2d.py  report.py  sample_catalog.py  sample_catalog_cli.py  utils.py  workflow_cli.py  workflow_config.py  workflow_schema.py  workflows.py
src/sar_pattern_validation/voila_frontend/: AGENTS.md  __init__.py  kill_voila_servers.sh  models.py  runner.py  runtime.py  state.py  ui.py
tests/: conftest.py  helpers.py  test_gamma_map_evaluator.py  test_image_loader.py  test_measurement_validation.py  test_measurement_validation_report.py  test_negative_validation.py  test_notebook_boundary.py  test_notebook_smoke.py  test_registration.py  test_report.py  test_sample_catalog_cli.py  test_tutorial_validation.py  test_voila_e2e.py  test_voila_frontend.py  test_voila_stability.py  test_workflow_cli.py  test_workflows.py
tests/artifacts/: tutorial_gamma_field.npz  tutorial_reference_metrics.json
tests/artifacts/measurement_validation/: 2450_10mm_1g_1_gamma_field.npz  2450_10mm_1g_1_metrics.json  report_900mhz.json  (+16 more)
(+236 files in other folders)
