[project]
name = "sar-pattern-validation"
version = "1.0.0"
description = "SAR Pattern Validation: registration and gamma-comparison of SAR measurement against reference data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matthew Morvan", email = "morvan@zmt.swiss" }, {name="Javier Garcia Ordonez", email="ordonez@itis.swiss"}, {name="Melanie Steiner", email="steiner@itis.swiss"}, {name="Mark Douglas", email="douglas@itis.swiss"}]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=1.5",
    "pydantic>=2.8",
    "scikit-image>=0.21",
    "scipy>=1.10",
    "simpleitk>=2.2.1",
]

[project.optional-dependencies]
e2e = [
    "pytest-playwright>=0.5",
    "playwright>=1.40",
]

[project.scripts]
sar-pattern-validation = "sar_pattern_validation.workflow_cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.27",
    "jupyter>=1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.0",
    "ty>=0.0.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sar_pattern_validation*"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = ["B028", "E501", "N806", "N813", "N803"]

[tool.ruff.lint.per-file-ignores]
"voila.ipynb" = [
    "N805", # Pydantic v1 validators use cls, not self
    "UP",   # Disable all pyupgrade rules (Python 3.9 compatibility for voila)
    "B905", # zip() without explicit strict= (requires Python 3.10+, voila uses 3.9)
]

[tool.pytest.ini_options]
addopts = "-n auto --dist worksteal"
markers = [
    "slow: mark test as compute-heavy (uses synthetic data, no LFS needed)",
    "validation: mark test as validation against reference artifacts (requires Git LFS data)",
    "e2e: end-to-end Playwright test against a live voila server (gated by --run-e2e; run with -p no:xdist)",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# Start with warnings-only; flip to "error" once codebase is clean

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
